used align-self: flex-start to fix card height issue

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,10 @@ h2 {
 
 p {
   padding: 0px;
+  margin: 0px;
+}
+
+ul p {
   margin: 10px;
 }
 
@@ -57,6 +61,7 @@ p {
   padding: 10px;
   margin: 0px 10px;
   width: 400px;
+  align-self: flex-start;
 }
 
 .listItem,
@@ -65,8 +70,13 @@ p {
   border-radius: 5px;
 }
 
-.cardDiv,
 .card-ul {
+  display: flex;
+  padding: 0;
+  margin: 0px;
+}
+
+.cardDiv {
   display: flex;
 }
 
